# ZQAutoNXG-V1

./: .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  VERCEL_ANALYTICS_SETUP.md  deploy.sh  docker-compose.yml  nodes_logic.py  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: App01  zqautonxg.instructions.md
.github/workflows/: python-app.yml  release.yml
.jules/: bolt.md
backend/: .env.example  requirements.txt
backend/zqautonxg/: database.py  main.py  models.py  schemas.py
backend/zqautonxg/routers/: connections.py  flows.py  runs.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PRECEDENT_INTEGRATION.md  SPEED_INSIGHTS.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: prometheus.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_api_workflows.py  test_basic.py  test_compression.py  test_cors_bug.py  test_endpoints.py  test_node_3.py  test_status_response.py  test_websocket.py
tests/performance/: README.md  locustfile.py  run_benchmark.sh  seed_data.py
web/: .env.example  .gitignore  .prettierignore  Dockerfile  README.md  next.config.js  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/health/: page.tsx
web/app/workflows/: page.tsx
web/components/ui/: badge.tsx  card.tsx
web/lib/: config.ts  utils.ts
web/lib/hooks/: use-intersection-observer.ts  use-local-storage.ts  use-scroll.ts
web/public/: robots.txt
zqautonxg/: __init__.py  app.py
zqautonxg/api/: __init__.py
zqautonxg/api/v1/: __init__.py  logs.py  network.py  nodes.py  workflows.py
zqautonxg/models/: __init__.py  node.py  status.py  workflow.py
