# ZQAutoNXG - Python Package Configuration
# Copyright © 2025 Zubin Qayam — ZQAutoNXG Powered by ZQ AI LOGIC
# Licensed under the Apache License, Version 2.0

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zqautonxg"
version = "6.0.0"
description = "ZQAutoNXG - Next-Generation eXtended Automation Platform (Powered by ZQ AI LOGIC™)"
readme = "README.md"
authors = [{name = "Zubin Qayam", email = "zubin.qayam@outlook.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = [
    "zqautonxg", 
    "automation", 
    "ai", 
    "next-generation", 
    "xr", 
    "extended-reality",
    "zq-ai-logic",
    "enterprise",
    "platform",
    "hexagonal-architecture"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Typing :: Typed"
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/zubinqayam/ZQAutoNXG-V1"
Repository = "https://github.com/zubinqayam/ZQAutoNXG-V1.git"
Issues = "https://github.com/zubinqayam/ZQAutoNXG-V1/issues"
Documentation = "https://github.com/zubinqayam/ZQAutoNXG-V1/blob/main/README.md"
Changelog = "https://github.com/zubinqayam/ZQAutoNXG-V1/releases"

[project.scripts]
zqautonxg = "zqautonxg.app:main"

[tool.setuptools]
packages = {find = {where = ["."], exclude = ["tests*"]}}  # Dynamic package discovery

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Development and Testing Tools Configuration

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py311']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["zqautonxg"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]