[package]
name = "zqautonxg-desktop"
version = "0.1.0"
description = "ZQAutoNXG Desktop Application"
authors = ["Jane Doe <jane.doe@example.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-sidecar", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
